--- a/index.html
+++ b/index.html
@@ -43,10 +43,13 @@
 
   <!-- LOVE GIF -->
   <section class="screen">
-    <img src="love.gif" class="gif">
-    <p>This made me smile.</p>
-    <button onclick="next()">Continue</button>
-  </section>
+  <img src="love.gif" class="gif">
+  <p>
+    I don’t usually do things like this.  
+    But some people make you want to.
+  </p>
+  <button onclick="next()">Continue</button>
+</section>
 
   <!-- ASK FOR PICS -->
   <section class="screen">
